k8s/production/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: production
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer-service
          image: sit722acremmalu.azurecr.io/customer-service:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      imagePullSecrets:
        - name: acr-secret
