k8s/production/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: production
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 8000       # Port exposed externally
      targetPort: 8000 # Container port
  type: LoadBalancer
