k8s/production/order-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db-service
  namespace: production
spec:
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
