k8s/production/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: production
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
