k8s/production/product-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: product-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: product-db-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: product-db-service
  namespace: production
spec:
  selector:
    app: product-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
