k8s/production/product-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-db-service
  namespace: production
spec:
  selector:
    app: product-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
