k8s/production/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: production
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: sit722acremmalu.azurecr.io/product-service:latest
          ports:
            - containerPort: 8002
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: production
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
