k8s/production/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: production
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
